# ai_chat

./: .gitignore  Cargo.toml  README.md
ollama-rust-rag/: README.md  main.py  requirements.txt
ollama-rust-rag/app/api/: routes.py
ollama-rust-rag/app/core/: config.py  logging.py
ollama-rust-rag/app/models/: chat.py
ollama-rust-rag/app/services/: langchain_service.py  llm_service.py  scrape_service.py
src/: config.rs  error.rs  logging.rs  main.rs  ui.rs
