[package]
name = "ai_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
color-eyre = "0.6.3"
crossterm = "0.28.1"
dirs = "5.0.1"
futures-util = "0.3.30"
log = "0.4.22"
ratatui = "0.28.1"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
simplelog = "0.12.2"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
